<resources>
    <string name="app_name">Paint</string>
    <string name="start_message">Welcome to Paint</string>
    <string name="start_button_msg">Start</string>
    <string name="paint_icon_description">Paint icon is a PaintBrush with blue tint</string>
    <string name="settings_button">Settings</string>
    <string name="about_button">About</string>
    <string name="first_set_button">Set Color of Background</string>
    <string name="goback_icon">Return to the Previous Page</string>
    <string name="fst_member">Miguel Costa - fc54431</string>
    <string name="snd_member">André Mendes - fc54459</string>
    <string name="trd_member">\?????????</string>
    <string name="change_bgc_button">Change Main Color</string>
    <string name="input_color_msg">Insert Color (ex. white, black)</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="ahhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh">AHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH</string>
    <string name="button">Button</string>
</resources>